Fix z-index problem + stepAssert image

--- a/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
+++ b/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
@@ -24,6 +24,10 @@
 
 @def timeLinePathHeight 30px;
 
+.timeStonePanel {
+    z-index: -1;
+}
+
 .timeStoneLabel {
     height: timeLineHeaderHeight;
     padding-left: 12px;
